@@ -45,6 +45,11 @@ sub new($$) {
         modules::load('xpad');
         run_program::run('xset', 'm', '1/8', '1');
     }
+    if (detect_devices::is_qemu()) {
+        mkdir_p('/var/run/spice-vdagentd');
+        run_program::raw({ detach => 1 }, 'spice-vdagentd', '-X', '>', '/dev/null', '2>', '/dev/null');
+        run_program::raw({ detach => 1 }, 'spice-vdagent', '>', '/dev/null', '2>', '/dev/null');
+    }
     any::disable_x_screensaver();
     run_program::raw({ detach => 1 }, 'mutter');
     install::gtk::init_gtk($o);
