@@ -1,6 +1,8 @@
 - include pvs/vgs/lvs symlinks
 - partionning:
   o display a wait message when adding a PV to VG
+- libvirt integration:
+  o start spice-vdagent{d,} (Qemu guest agent)
 
 Version 17.49 - 6 July 2016
 
